# go/gen/http/openapi3.json
@@ -1,119 +1,1 @@
-{
-  "openapi": "3.0.3",
-  "info": { "title": "Goa API", "version": "0.0.1" },
-  "servers": [
-    {
-      "url": "http://localhost:80",
-      "description": "Default server for portfolio"
-    }
-  ],
-  "paths": {
-    "/portfolio": {
-      "get": {
-        "tags": ["portfolio"],
-        "summary": "list portfolio",
-        "operationId": "portfolio#list",
-        "parameters": [
-          {
-            "name": "X-User-ID",
-            "in": "header",
-            "description": "User ID",
-            "allowEmptyValue": true,
-            "required": true,
-            "schema": {
-              "type": "string",
-              "description": "User ID",
-              "example": "Exercitationem sit harum."
-            },
-            "example": "A porro."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK response.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/Insight" },
-                  "example": [
-                    {
-                      "action": "Provident aut in.",
-                      "sentiment": "neutral",
-                      "summary": "Voluptatem ut eaque nisi sit nesciunt.",
-                      "symbol": "Consectetur sunt."
-                    },
-                    {
-                      "action": "Provident aut in.",
-                      "sentiment": "neutral",
-                      "summary": "Voluptatem ut eaque nisi sit nesciunt.",
-                      "symbol": "Consectetur sunt."
-                    }
-                  ]
-                },
-                "example": [
-                  {
-                    "action": "Provident aut in.",
-                    "sentiment": "neutral",
-                    "summary": "Voluptatem ut eaque nisi sit nesciunt.",
-                    "symbol": "Consectetur sunt."
-                  },
-                  {
-                    "action": "Provident aut in.",
-                    "sentiment": "neutral",
-                    "summary": "Voluptatem ut eaque nisi sit nesciunt.",
-                    "symbol": "Consectetur sunt."
-                  },
-                  {
-                    "action": "Provident aut in.",
-                    "sentiment": "neutral",
-                    "summary": "Voluptatem ut eaque nisi sit nesciunt.",
-                    "symbol": "Consectetur sunt."
-                  }
-                ]
-              }
-            }
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "Insight": {
-        "type": "object",
-        "properties": {
-          "action": {
-            "type": "string",
-            "description": "Recommended Action",
-            "example": "Ex eius et iure repellat."
-          },
-          "sentiment": {
-            "type": "string",
-            "description": "Market Sentiment",
-            "example": "neutral",
-            "enum": ["bullish", "bearish", "neutral"]
-          },
-          "summary": {
-            "type": "string",
-            "description": "Analysis Summary",
-            "example": "Cupiditate animi."
-          },
-          "symbol": {
-            "type": "string",
-            "description": "Stock Symbol",
-            "example": "Nihil quae impedit aut eligendi cumque."
-          }
-        },
-        "example": {
-          "action": "Sed molestiae.",
-          "sentiment": "neutral",
-          "summary": "Quia qui facere id.",
-          "symbol": "Quasi dolorem magni."
-        },
-        "required": ["symbol", "sentiment", "summary", "action"]
-      }
-    }
-  },
-  "tags": [{ "name": "portfolio", "description": "Provide AI insights" }]
-}
+{"openapi":"3.0.3","info":{"title":"Goa API","version":"0.0.1"},"servers":[{"url":"http://localhost:80","description":"Default server for portfolio"}],"paths":{"/portfolio":{"get":{"tags":["portfolio"],"summary":"list portfolio","operationId":"portfolio#list","parameters":[{"name":"X-User-ID","in":"header","description":"User ID","allowEmptyValue":true,"required":true,"schema":{"type":"string","description":"User ID","example":"Sunt laudantium omnis aliquid laudantium sunt quidem."},"example":"Repellat ipsum."}],"responses":{"200":{"description":"OK response.","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/Insight"},"example":[{"action":"Ipsa illo inventore dicta officia neque quibusdam.","sentiment":"bearish","summary":"Rem facere eligendi.","symbol":"In aut vero."},{"action":"Ipsa illo inventore dicta officia neque quibusdam.","sentiment":"bearish","summary":"Rem facere eligendi.","symbol":"In aut vero."}]},"example":[{"action":"Ipsa illo inventore dicta officia neque quibusdam.","sentiment":"bearish","summary":"Rem facere eligendi.","symbol":"In aut vero."},{"action":"Ipsa illo inventore dicta officia neque quibusdam.","sentiment":"bearish","summary":"Rem facere eligendi.","symbol":"In aut vero."},{"action":"Ipsa illo inventore dicta officia neque quibusdam.","sentiment":"bearish","summary":"Rem facere eligendi.","symbol":"In aut vero."},{"action":"Ipsa illo inventore dicta officia neque quibusdam.","sentiment":"bearish","summary":"Rem facere eligendi.","symbol":"In aut vero."}]}}}}}},"/portfolio/summary":{"get":{"tags":["portfolio"],"summary":"summary portfolio","operationId":"portfolio#summary","parameters":[{"name":"X-User-ID","in":"header","description":"User ID","allowEmptyValue":true,"required":true,"schema":{"type":"string","description":"User ID","example":"Sed repudiandae qui in."},"example":"Architecto ipsum."}],"responses":{"200":{"description":"OK response.","content":{"application/json":{"schema":{"$ref":"#/components/schemas/Summary"},"example":{"balance":0.8016369060697939,"currency":"Quia nostrum qui sed.","trend_direction":"neutral","trend_percent":0.3380403341183869}}}}}}}},"components":{"schemas":{"Insight":{"type":"object","properties":{"action":{"type":"string","description":"Recommended Action","example":"Qui modi delectus tenetur."},"sentiment":{"type":"string","description":"Market Sentiment","example":"neutral","enum":["bullish","bearish","neutral"]},"summary":{"type":"string","description":"Analysis Summary","example":"Minima est sequi eum et tenetur repellendus."},"symbol":{"type":"string","description":"Stock Symbol","example":"Perferendis ad doloremque debitis quas enim."}},"example":{"action":"Sunt ex mollitia eum saepe.","sentiment":"bearish","summary":"Laudantium ea minus.","symbol":"Aut numquam."},"required":["symbol","sentiment","summary","action"]},"Summary":{"type":"object","properties":{"balance":{"type":"number","description":"Total Balance","example":0.14897896557474286,"format":"double"},"currency":{"type":"string","description":"Currency Code","example":"Voluptatem molestiae omnis iusto ut sit adipisci."},"trend_direction":{"type":"string","description":"Trend Direction","example":"down","enum":["up","down","neutral"]},"trend_percent":{"type":"number","description":"Trend Percentage","example":0.13610103006124838,"format":"double"}},"example":{"balance":0.32651858080382845,"currency":"Dolor cumque maxime dolorem.","trend_direction":"up","trend_percent":0.46556651681078914},"required":["balance","currency","trend_percent","trend_direction"]}}},"tags":[{"name":"portfolio","description":"Provide AI insights"}]}
