# go/gen/portfolio/endpoints.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.23.4, DO NOT EDIT.
+// Code generated by goa v3.20.0, DO NOT EDIT.
 //
 // portfolio endpoints
 //
@@ -15,19 +15,22 @@ import (
 
 // Endpoints wraps the "portfolio" service endpoints.
 type Endpoints struct {
-	List goa.Endpoint
+	List    goa.Endpoint
+	Summary goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "portfolio" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
-		List: NewListEndpoint(s),
+		List:    NewListEndpoint(s),
+		Summary: NewSummaryEndpoint(s),
 	}
 }
 
 // Use applies the given middleware to all the "portfolio" service endpoints.
 func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.List = m(e.List)
+	e.Summary = m(e.Summary)
 }
 
 // NewListEndpoint returns an endpoint function that calls the method "list" of
@@ -36,5 +39,14 @@ func NewListEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*ListPayload)
 		return s.List(ctx, p)
+	}
+}
+
+// NewSummaryEndpoint returns an endpoint function that calls the method
+// "summary" of service "portfolio".
+func NewSummaryEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*SummaryPayload)
+		return s.Summary(ctx, p)
 	}
 }
